# ecommerce_order_management

./: .gitignore  README.md  data_loader.py  main.py  main_copy.py  main_old.py  order_system.py  order_system.py.old  order_system_old.py  verify_refactored_new.py
application/: __init__.py  order_processor.py
config/: mypy.ini  pyproject.toml
domain/enums/: __init__.py  customer_segment.py  membership_tier.py  order_status.py  payment_method.py  payment_status.py  product_category.py  shipment_status.py  shipping_method.py  us_state.py
domain/models/: __init__.py  customer.py  order.py  order_item.py  payment_transaction.py  product.py  promotion.py  shipment.py  supplier.py
domain/value_objects/: __init__.py  address.py  email.py  inventory_log_entry.py  money.py  payment_transaction.py  phone_number.py  pricing_result.py  sales_report.py
repositories/: __init__.py
repositories/in_memory/: __init__.py  base_repository.py  customer_repository_impl.py  order_repository_impl.py  product_repository_impl.py  promotion_repository_impl.py  shipment_repository_impl.py  supplier_repository_impl.py
repositories/interfaces/: __init__.py  customer_repository.py  order_repository.py  product_repository.py  promotion_repository.py  shipment_repository.py  (+1 more)
services/: __init__.py  customer_service.py  inventory_service.py  marketing_service.py  notification_service.py  order_service.py  payment_service.py  product_service.py  promotion_service.py  reporting_service.py  shipment_service.py  shipping_service.py  supplier_service.py
tests/: __init__.py
(+40 files in other folders)
